# dbtbasic

./: .gitignore  pyproject.toml  readme.md  requirements.txt  test.py
src/dbtbasic/: __init__.py  yaml.py
src/dbtbasic/backend/: base_backend.py  duckdb_backend.py  postgres_backend.py
src/pydbt.egg-info/: PKG-INFO
tests/: test_postgres_backend.py  test_pydbt.py  test_sample_project_duckdb.py
tests/sample_project/: avg_lats.sql  cities.csv  stg_lat_temps.sql  weather.csv
